--- a/src/component/Display/display.module.css
+++ b/src/component/Display/display.module.css
@@ -1,3 +1,8 @@
-.h1 {
-  text-align: center;
+.Display {
+  display: flex;
+  background-color: #858693;
+  height: 100px;
+  color: #fff;
+  font-weight: bold;
+  margin: 0;
 }
