--- a/src/component/Display/display.module.css
+++ b/src/component/Display/display.module.css
@@ -1,8 +1,15 @@
 .Display {
+  position: relative;
   display: flex;
   background-color: #858693;
   height: 100px;
   color: #fff;
   font-weight: bold;
   margin: 0;
+}
+
+.total {
+  position: absolute;
+  right: 10px;
+  align-self: flex-end;
 }
